--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
 
 .btn {
 	background: var(--color-primary);
-	color: var(--color-background-secondary);
+	color: var(--white);
 	border-radius: 24px;
 	padding: 10px 18px;
 	display: flex;
