--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -44,7 +44,7 @@
     flex-grow: 1; 
     justify-content: center;
     align-items: center;
-    background-color: var(--new-column-light);
+    background-color: var(--add-column-bg);
     color: var(--color-secondary);
     border-radius: 6px;
     margin-top: 35px;
